test/conformance/chainsaw/mutating-policies/existing/same-trigger-target/ns-update.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: test-mpol-same-trigger-target-1
  labels:
    color: green
