test/conformance/chainsaw/mutating-policies/existing/same-trigger-target/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: customapply
spec:
  steps:
  - name: create namespaces
    try:
    - create:
        file: ns.yaml
    - assert:
        file: ns.yaml
  - name: create policy
    use:
      template: ..//../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ..//../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-same-trigger-target
  - name: update resources
    try:
    - script:
        content: kubectl label ns test-mpol-same-trigger-target-1 color=green
  - name: check patches
    try:
    - assert:
        file: ns-assert.yaml
